tiffany-ui/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1153
expression: rendered
---
╭─────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.2.2 -> 9.9.9                     │
│ Run brew upgrade macguffinQ/tap/tiffany-loop to update. │
│                                                         │
│ See full release notes:                                 │
│ https://github.com/macguffinQ/Tiffany/releases/latest   │
╰─────────────────────────────────────────────────────────╯
